<resources>
    <string name="app_name">csaba-SubBook</string>
    <string name="addButton">ADD</string>
    <string name="totalValue">$5000.00</string>
    <string name="saveButton">SAVE</string>
    <string name="deleteButton">DELETE</string>
    <string name="itemName">name</string>
    <string name="itemPrice">$0.00</string>
    <string name="itemDate">yyyy-mm-dd</string>
    <string name="itemComment">Comment about the subscription.</string>
    <string name="fieldName">Name: </string>
    <string name="fieldDate">Date:</string>
    <string name="fieldCost">Cost:</string>
    <string name="fieldComment">Comment:</string>
</resources>
